# meteosatlib

./: .copr.enc  .gitignore  .gitmodules  .travis-build.sh  .travis.yml  AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  TODO.gdal  TODO.old  configure.ac  fabfile.py  libgrib.m4  libgrib.pc.in  libhrit.m4  libhrit.pc.in  libmsat.m4  libmsat.pc.in  libopenmtp.pc.in  meson.build  meson_options.txt  meteosatlib.m4  meteosatlib.pc.in  meteosatlib.spec  meteosatlib.spec.in  meteosatlib_f12.spec  run-local  run-local.in  testalign
conv/: Automake.rules  ExportGRIB.cpp  ExportGRIB.h  ExportImage.cpp  ExportImage.h  ExportNetCDF.cpp  ExportNetCDF.h  ExportNetCDF24.cpp  ExportNetCDF24.h  Image.cpp  Image.h  Image.tcc  ImageData.cpp  ImageData.h  ImageData.tcc  ImportGRIB.cpp  ImportGRIB.h  ImportNetCDF.cpp  ImportNetCDF.h  ImportNetCDF24.cpp  ImportNetCDF24.h  ImportSAFH5.cpp  ImportSAFH5.h  ImportXRIT.cpp  ImportXRIT.h  Makefile.am  NetCDFUtils.h  Progress.cpp  Progress.h  SAFH5Utils.cpp  hdf5_notes  parameters.h
decompress/: .gitignore  Automake.rules  LICENSE  Makefile.am  PublicDecompWT.sh  meson.build  patch_EUMETSAT  patch_EUMETSAT_2.02  patch_EUMETSAT_2.04  patch_EUMETSAT_2.06
examples/: Automake.rules  Makefile.am  Met_Reproj.cpp  NetCDF2Grib.cpp  Points.h  Proj_Geos.h  Proj_Polar.cpp  Proj_Polar.h  Projection.h  add_palette  bluered-palette.txt  contrast-stretch  draw_coastlines  make-composite  msatconv.cpp  ndvi  products
gdal/: Makefile.am  meson.build  msat2gdal.cpp  msatgdalplugin.cpp  utils.cpp  utils.h
gdal/grib/: grib.cpp  grib.h  utils.h
gdal/netcdf/: netcdf.cpp  netcdf.h  netcdf24.cpp  netcdf24.h  utils.cpp  utils.h
gdal/reflectance/: base.cpp  base.h  cos_sol_za.cpp  cos_sol_za.h  jday.cpp  jday.h  pixeltolatlon.cpp  pixeltolatlon.h  reflectance.cpp  reflectance.h  sat_za.cpp  sat_za.h  sza.cpp  sza.h
gdal/safh5/: safh5.cpp  safh5.h  utils.cpp  utils.h
gdal/xrit/: dataset.cpp  dataset.h  rasterband.cpp  rasterband.h  reflectance.cpp  reflectance.h  xrit.cpp  xrit.h
grib/: Automake.rules  Ebisuzaki.cpp  Ebisuzaki.h  GRIB.cpp  GRIB.h  Makefile.am
hdf5/: Automake.rules  Makefile.am  SAFH52Grib.cpp  Utils.cpp  Utils.h
msat/: Automake.rules  ExportGDAL.cpp  ExportGDAL.h  ExportGDTNetCDF.cpp  ExportGRIB.cpp  ExportGRIB.h  ExportImage.cpp  ExportImage.h  ExportNetCDF.cpp  ExportNetCDF.h  ExportNetCDF24.cpp  ExportNetCDF24.h  ExportRepNetCDF.cpp  ExportRepNetCDF.h  Image.cpp  Image.h  Image.tcc  ImportGDAL.cpp  ImportGDAL.h  ImportGRIB.cpp  ImportGRIB.h  ImportNetCDF.cpp  ImportNetCDF.h  ImportNetCDF24.cpp  ImportNetCDF24.h  ImportSAFH5.cpp  ImportSAFH5.h  ImportUtils.cpp  ImportUtils.h  ImportXRIT.cpp  ImportXRIT.h  Makefile.am  NetCDFUtils.h  Progress.cpp  Progress.h  SAFH5Utils.cpp  SAFH5Utils.h  auto_arr_ptr.cpp  auto_arr_ptr.h  config.h.in  (+3 more)
msat/gdal/: clean_cpl_error.h  clean_gdal_priv.h  const.h  dataset.cpp  dataset.h  gdaltranslate.cpp  gdaltranslate.h  points.h
msat/hri/: HRI.cpp  HRI.h  HRI_geolocation.h  HRI_image.cpp  HRI_image.h  HRI_machine.cpp  HRI_machine.h  HRI_subframe_identification.cpp  HRI_subframe_identification.h  HRI_subframe_interpretation.cpp  HRI_subframe_interpretation.h  HRI_subframe_keyslot.cpp  HRI_subframe_keyslot.h  HRI_subframe_label.cpp  HRI_subframe_label.h
msat/hrit/: MSG_HRIT.cpp  MSG_HRIT.h  MSG_channel.cpp  MSG_channel.h  MSG_compression.cpp  MSG_compression.h  MSG_data.cpp  MSG_data.h  MSG_data_CelestialEvents.cpp  MSG_data_CelestialEvents.h  MSG_data_GeometricProc.cpp  MSG_data_GeometricProc.h  MSG_data_GeometricQuality.cpp  MSG_data_GeometricQuality.h  MSG_data_IMPFConfiguration.cpp  MSG_data_IMPFConfiguration.h  MSG_data_ImageAcquisition.cpp  MSG_data_ImageAcquisition.h  MSG_data_ImageDescription.cpp  MSG_data_ImageDescription.h  MSG_data_ImageProdStats.cpp  MSG_data_ImageProdStats.h  MSG_data_NavigExtrResult.cpp  MSG_data_NavigExtrResult.h  MSG_data_RadiometricProc.cpp  MSG_data_RadiometricProc.h  MSG_data_RadiometricQuality.cpp  MSG_data_RadiometricQuality.h  MSG_data_SGS_header.cpp  MSG_data_SGS_header.h  MSG_data_SatelliteStatus.cpp  MSG_data_SatelliteStatus.h  MSG_data_TimelinComple.cpp  MSG_data_TimelinComple.h  MSG_data_format.cpp  MSG_data_format.h  MSG_data_gts.cpp  MSG_data_gts.h  MSG_data_image.cpp  MSG_data_image.h  (+37 more)
msat/msg-native/: MSG_native.cpp  MSG_native.h  MSG_native_header.cpp  MSG_native_header.h  MSG_native_line.cpp  MSG_native_line.h  MSG_native_packetheader.cpp  MSG_native_packetheader.h  MSG_native_trailer.cpp  MSG_native_trailer.h
msat/omtp-ids/: ByteSex.cc  ByteSex.hh  Constants.hh  FileHeader.cc  FileHeader.hh  LineHeader.cc  LineHeader.hh  OpenMTP-IDS.cc  OpenMTP-IDS.hh  Record.cc  Record.hh  RecordHeader.cc  RecordHeader.hh  ScanLine.cc  ScanLine.hh  sysdep.h
msat/openmtp/: OpenMTP.cpp  OpenMTP.h  OpenMTP_ascii_header.cpp  OpenMTP_ascii_header.h  OpenMTP_binary_header.cpp  OpenMTP_binary_header.h  OpenMTP_image.cpp  OpenMTP_image.h  OpenMTP_image_line.cpp  OpenMTP_image_line.h  OpenMTP_machine.cpp  OpenMTP_machine.h
msat/proj/: Area.cpp  Geos.cpp  Geos.h  Latlon.cpp  Latlon.h  Makefile.am  (+7 more)
proj/: Area.cpp  Area.h  Geos.cpp  Geos.h  Makefile.am  Mercator.cpp  Mercator.h  Points.h  Polar.cpp  Polar.h  Proj_Mercator.cpp  Projection.h  Standard.h  const.h
test/: Automake.rules  Makefile.am  msatlib_test_wrap  test-image.cpp  test-importgrib.cpp  test-importnetcdf.cpp  test-importsafh5.cpp  test-importxrit.cpp  test-utils.cpp  test-utils.h
tests/: .gitignore  Automake.rules  Makefile.am  meson.build  msatlib_test_wrap  runtest  test-dataaccess.cpp  test-facts.cpp  test-fileaccess.cpp  test-image.cpp  test-importgrib.cpp  test-importnetcdf.cpp  test-importsafh5.cpp  test-importxrit.cpp  test-proj.cpp  test-utils.cpp  test-utils.h  tests-main.cc  tut-main.cpp  tut.h  tut_reporter.h
tools/: .gitignore  Automake.rules  Makefile.am  dbasat.cpp  image.cpp  image.h  interpolate.cpp  meson.build  msat-reflectance-ir39  msat-view  msat.1  msat.cpp  msat2gdal  msatconv.cpp  msatgmt.cpp  regenerate-msat-manpage  satinfo.csv  xritdump.cpp
(+288 files in other folders)
